--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
+    "github-pages": "^3.0.2",
     "gsap": "^3.12.5",
     "install": "^0.13.0",
     "npm": "^10.4.0",
